<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/Base.Theme.MyFirstApplication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".seguro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/armata"
        android:padding="40dp"
        android:text="@string/Seg"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/Serv"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/Aut"
            android:textSize="16sp"
            android:textStyle="italic|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:layout_weight="2"
            android:background="@color/grey"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/imv"
            android:textSize="16sp"
            android:textStyle="italic|bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="8dp"
        android:text="@string/Nov"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingBottom="30dp"
        android:text="@string/msg"
        android:textColor="@color/grey" />
    <View
        android:background="#999999"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingBottom="10dp"
        android:text="@string/Help"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/Contato" />

</LinearLayout>